# BudgetApp

./: .env.example  .gitignore  AUTH_SETUP.md  FRONTEND_STRUCTURE.md  GOOGLE_HOME_SETUP.md  README.md  build.sh  dev.sh  docker-compose.yml  frontend-dev.sh  reset-db.sh  vercel.json
.github/workflows/: ci.yml
apps/budget/: Dockerfile.dev  README.md  angular.json  eslint.config.js  package-lock.json  package.json  vercel.json
apps/budget/src/app/: app.config.ts  app.routes.ts  (+1 more)
apps/dashboard/: Dockerfile  Dockerfile.dev  README.md  angular.json  eslint.config.js  package-lock.json  package.json  proxy.conf.prod.json
apps/dashboard/src/: index.html
apps/list/: Dockerfile  Dockerfile.dev  README.md  angular.json  eslint.config.js  package-lock.json  package.json
apps/list/src/: index.html  styles.scss
backend/: README.md  package-lock.json  package.json
backend/src/: index.ts
backend/src/models/: Debt.ts  RecurringTransaction.ts
backend_rust/: Cargo.toml  Dockerfile  README.md
backend_rust/src/: auth.rs  db.rs  main.rs  models.rs  utils.rs
backend_rust/src/handlers/: debt_handler.rs  generated_transaction_handler.rs  health_handler.rs  integration_handler.rs  list_handler.rs  mod.rs  todo_occurrence_handler.rs  transaction_handler.rs  user_handler.rs  voice_handler.rs
frontend/: Dockerfile.dev  README.md  angular.json  package-lock.json  package.json  vercel.json
frontend/src/: styles.scss
frontend/src/app/: app.routes.ts
frontend/src/environments/: environment.prod.ts  environment.ts
scripts/: migrate-compass.js  migrate.js  package.json
(+143 files in other folders)
