[package]
name = "budget-app-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.1", features = ["bson-chrono-0_4"] }
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
